--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -28,4 +28,6 @@
         <input type="submit" value="Войти"/>
     </form>
 
+    <p> Нет аккаунта? <a href="{% url 'signup' %}">Зарегистрируйтесь сейчас!</a> </p>
+
 {% endblock content %}
