--- a/templates/good_homes/good_homes_list.html
+++ b/templates/good_homes/good_homes_list.html
@@ -18,8 +18,6 @@
             <!-- ВЫВОДИМ ВСЕ ДАННЫЕ ИЗ ЗАПИСИ, ВКЛЮЧАЯ КАРТИНКУ -->
             <div class="animal-chars">
                 <h2> <a href="{% url 'lost_detail' animal.pk %}">{{animal.name}} | {{animal.type}} </a> </h2>
-                <p>Пропал(а): {{animal.place}} | {{animal.time}}</p>
-                <p>Особые приметы: {{animal.special_signs}}</p>
                 <p>Подробности: {{animal.description}}</p>
                 <p>Контакты хозяина: {{animal.contact}}</p>
                 <p>Опубликовано: {{animal.published|date:"d M Y в H:m по МСК"}}</p>
@@ -29,7 +27,7 @@
 
     <!-- ЕСЛИ В СПИСКЕ НЕТ ОБЪЯВЛЕНИЙ -->
     {% else %}
-        <p>В списке пропавших животных пусто.</p>
+        <p>В списке животных в добрые руки пусто.</p>
     {% endif %}
 
 
