--- a/templates/lost/lost_detail.html
+++ b/templates/lost/lost_detail.html
@@ -33,6 +33,7 @@
     <br>
     <br>
 
+    <!-- ДОСТУП К КОНТЕНТУ НИЖЕ ПРЕДОСТАВЛЯЕТСЯ ТОЛЬКО АВТОРУ ОБЪЯВЛЕНИЯ ИЛИ SUPERUSER'у -->
     {% if request.user == animal.author or request.user.is_superuser %}
         <!-- HTML модального окна для удаления объявления -->
         <div id="DeleteModal" class="modal">
@@ -67,15 +68,12 @@
         </div>
 
         <!-- КНОПКА "НАЙДЕН" УДАЛЯЕТ ОБЪЯВЛЕНИЕ ИЗ БАЗА ДАННЫХ И ДЕЛАЕТ ЗАПИСЬ В РАЗДЕЛ "НАЙДЕНЫ" -->
-        <!-- ДОСТУПНА ТОЛЬКО АВТОРУ ОБЪЯВЛЕНИЯ И АДМИНИСТРАТОРУ -->
         <a href="#FoundModal" class="button-green" style="font-size: 20px;">Найден(а)</a>
 
         <!-- КНОПКА "РЕДАКТИРОВАТЬ" ОТКРЫВАЕТ ФОРМУ РЕДАКТИРОВАНИЯ ОБЪЯВЛЕНИЯ -->
-        <!-- ДОСТУПНА ТОЛЬКО АВТОРУ ОБЪЯВЛЕНИЯ И АДМИНИСТРАТОРУ -->
         <a href="{% url 'lost_edit' animal.pk %}" class="button-blue" style="font-size: 20px;">Редактировать</a>
 
         <!-- КНОПКА "УДАЛИТЬ" УДАЛЯЕТ ОБЪЯВЛЕНИЕ ИЗ БАЗЫ ДАННЫХ -->
-        <!-- ДОСТУПНА ТОЛЬКО АВТОРУ ОБЪЯВЛЕНИЯ И АДМИНИСТРАТОРУ -->
         <a href="#DeleteModal" class="button-red" style="font-size: 20px;">Удалить</a>
 
     {% endif %}
