--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
         {% block css %}
             <link href="{% static 'lost/css/buttons.css' %}" rel="stylesheet"/>
             <link href="{% static 'lost/css/base.css' %}" rel="stylesheet"/>
+            <link href="{% static 'lost/css/dropdown.css' %}" rel="stylesheet"/>
         {% endblock css %}
 
 
@@ -32,17 +33,26 @@
                     <li><a href="{% url 'home' %}">Главная</a></li>
                     <li><a href="{% url 'lost_list' %}">Пропавшие животные</a></li>
                     <li><a href="{% url 'lost_list' %}">Животные в добрые руки</a></li>
-                    <li><a href="{% url 'lost_create' %}">Подать объявление</a></li>
+
+                    <div class="dropdown">
+                        <li>Подать объявление</li>
+
+                        <div class="dropdown-content">
+                            <a href="{% url 'lost_create' %}">Пропал питомец</a>
+                            <a href="{% url 'lost_create' %}">В добрые руки</a>
+                        </div>
+                    </div>
+
                     <li><a href="{% url 'about' %}">О сайте</a></li>
                 </ul>
 
                 <div class="nav-auth">
                     {% if user.is_authenticated %}
                         {% if user.is_superuser %}
-                            <p>Привет,<a href="/admin/">{{user.username}}!</a></p>
+                            <p>Привет,<a href="/admin/" class="admin-link">{{user.username}}!</a></p>
                             <a href="{% url 'logout' %}">Выйти</a>
                         {% else %}
-                            <p>Привет,{{user.username}}!</p>
+                            <p>Привет, {{user.username}}!</p>
                             <a href="{% url 'logout' %}">Выйти</a>
                         {% endif %}
                     {% else %}
