--- a/templates/lost/lost_detail.html
+++ b/templates/lost/lost_detail.html
@@ -25,7 +25,7 @@
     <p>Пропал(а): {{animal.place}} | {{animal.time}}</p>
     <p>Особые приметы: {{animal.special_signs}}</p>
     <p>Подробности: {{animal.description}}</p>
-    <p>Контакты хозяина: {{animal.phone_number}}</p>
+    <p>Телефон для связи: {{animal.phone_number}}</p>
     <p>Опубликовано: {{animal.published|date:"d M Y в H:m по МСК"}}</p>
     <img class="img centered" src="{{animal.photo.url}}" style="width:250px;">
 
