--- a/templates/good_hands/good_hands_create.html
+++ b/templates/good_hands/good_hands_create.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<!-- ШАБЛОН СТРАНИЦЫ "НОВОЕ ОБЪЯВЛЕНИЕ" В КАТЕГОРИИ "ПРОПАВШИЕ ЖИВОТНЫЕ"-->
+<!-- ШАБЛОН СТРАНИЦЫ С СОЗДАНИЕМ НОВОГО ОБЪЯВЛЕНИЯ "В ДОБРЫЕ РУКИ" -->
 <!-- !!!ВОЗМОЖНО СТОИТ СДЕЛАТЬ ОДИН ШАБЛОН ДЛЯ ВСЕХ ОБЪЯВЛЕНИЙ, ПЕРЕДЕЛАВ ФОРМУ!!! -->
 
 {% extends 'base.html' %}
@@ -10,7 +10,7 @@
 {% block content %}
 
 
-    <h2>ПРОПАВШИЕ ЖИВОТНЫЕ :: Новое объявление</h2>
+    <h2>В ДОБРЫЕ РУКИ :: Новое объявление</h2>
 
     <!-- ЗНАЧЕНИЕ ПАРАМЕТРА ENCTYPE ПОЗВОЛЯЕТ ФОРМЕ РАБОТАТЬ C ФАЙЛАМИ (ДЛЯ КАРТИНОК)-->
     <form method="POST" enctype="multipart/form-data">
