--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -27,7 +27,7 @@
     <div class="main-buttons">
         <a href="{% url 'lost_create' %}" class="button-green" style="margin-right: 40px;">Мой питомец пропал</a>
         <a href="{% url 'lost_list' %}" class="button-green">Кого сейчас ищут?</a>
-        <a href="#####################" class="button-green" style="margin-left: 40px;">В добрые руки</a>
+        <a href="{% url 'good_hands_list' %}" class="button-green" style="margin-left: 40px;">В добрые руки</a>
     </div>
 
 
