--- a/templates/good_hands/good_hands_edit.html
+++ b/templates/good_hands/good_hands_edit.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 
-<!-- ШАБЛОН СТРАНИЦЫ С СОЗДАНИЕМ НОВОГО ОБЪЯВЛЕНИЯ "В ДОБРЫЕ РУКИ" -->
+<!-- ШАБЛОН СТРАНИЦЫ "РЕДАКТИРОВАНИЕ ОБЪЯВЛЕНИЯ" В КАТЕГОРИИ "ПРОПАВШИЕ ЖИВОТНЫЕ"-->
 <!-- !!!ВОЗМОЖНО СТОИТ СДЕЛАТЬ ОДИН ШАБЛОН ДЛЯ ВСЕХ ОБЪЯВЛЕНИЙ, ПЕРЕДЕЛАВ ФОРМУ!!! -->
 
 {% extends 'base.html' %}
 
-{% block title %} Новое объявление {% endblock title %}
+{% block title %} Редактирование объявления {% endblock title %}
 
 {% block content %}
 
 
-    <h2>Новое объявление</h2>
+    <h2>Редактирование объявления</h2>
 
     <!-- ЗНАЧЕНИЕ ПАРАМЕТРА ENCTYPE ПОЗВОЛЯЕТ ФОРМЕ РАБОТАТЬ C ФАЙЛАМИ (ДЛЯ КАРТИНОК)-->
     <form method="POST" enctype="multipart/form-data">
@@ -19,7 +19,7 @@
         <!-- ФОРМА -->
         {{form.as_p}}
 
-        <input type="submit" value="Опубликовать"/>
+        <input type="submit" class="button-green" value="Сохранить"/>
     </form>
 
 
