I have add moderation app and configure it

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,9 @@
                 <ul>
                     <!-- ССЫЛКИ НА СТРАНИЦЫ В ШАПКЕ-->
                     <li><a href="{% url 'home' %}">Главная</a></li>
-                    <li><a href="{% url 'home' %}">Модерация</a></li>
+                    {% if user.is_superuser %}
+                        <li><a href="{% url 'to_moderate' %}">Модерация</a></li>
+                    {% endif %}
                     <li><a href="{% url 'lost_list' %}">Пропавшие животные</a></li>
                     <li><a href="{% url 'good_hands_list' %}">Животные в добрые руки</a></li>
 
